--- a/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
+++ b/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
@@ -40,6 +40,10 @@
   }
 }
 
+.disconnectedBorder {
+  border-right: 2px solid rgb(234, 76, 91);;
+}
+
 .active {
   background-color: var(--theme-sidebar-menu-item-background-color-active);
 
@@ -83,10 +87,19 @@
     white-space: nowrap;
   }
 
-  .disconnectedIcon {
-    height: 21px;
-    object-fit: contain;
-    width: 21px;
+  .hardwareWalletsIcon {
+    svg {
+      height: 30px;
+      width: 30px;
+    }
+    &.disconnected {
+      svg {
+        opacity: 0.3;
+        path {
+          fill: var(--theme-icon-sidebar-color);
+        }
+      }
+    }
   }
 }
 
