DDW-373 Syncing animation on wallet dropdown - fixes

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -81,4 +81,8 @@
     position: absolute !important;
     right: 50px !important;
   }
+
+  .WalletsDropdownOption_component {
+    width: 100% !important;
+  }
 }
