--- a/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
+++ b/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
@@ -27,7 +27,9 @@
     }
 
     .SimpleOptions_option {
-      padding: 19px 20px;
+      display: flex;
+      height: 50px;
+      padding: 10px 20px;
     }
 
     .SimpleOptions_option,
