--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -69,17 +69,16 @@
 
     &:hover {
       background-color: var(
-        --theme-dialog-fullsize-field-background-color
+          --theme-dialog-fullsize-field-background-color
       ) !important;
     }
   }
 
   .SimpleOptions_option.SimpleOptions_selectedOption
-    .WalletsDropdownOption_component
-    .WalletsDropdownOption_topRow
-    .WalletsDropdownOption_topRowSync {
-    position: absolute !important;
-    right: 50px !important;
+  .WalletsDropdownOption_component
+  .WalletsDropdownOption_topRow
+  .WalletsDropdownOption_topRowSync {
+    display: none;
   }
 
   .WalletsDropdownOption_component {
