--- a/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
+++ b/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
@@ -62,7 +62,7 @@
         --theme-dialog-fullsize-background-color-opaque
       ) !important;
       border: 1px solid var(--theme-dialog-fullsize-text-color) !important;
-      border-radius: 4px;
+      border-radius: 2px;
     }
 
     // Background Light
@@ -218,6 +218,15 @@
           color: var(--theme-splash-network-overlay-button-text-color);
         }
       }
+    }
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--theme-splash-network-scrollbar-thumb-background);
+    &:hover {
+      background-color: var(
+          --theme-splash-network-scrollbar-thumb-background-hover
+      );
     }
   }
 }
