DDW-16 Table comparison view for stake pools - fixes for table view

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -115,6 +115,7 @@
       tr {
         &:hover {
           background-color: var(--theme-staking-stake-pools-search-clear-button-background-color);
+          cursor: pointer;
         }
       }
     }
