DDW-16 Table comparison view for stake pools - fixes for table view

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -111,6 +111,21 @@
       }
     }
 
+    .tableHeader {
+      position: initial;
+
+      &.fixedTableHeader {
+        background-color: #fafbfc;
+        box-shadow: 0 10px 10px -10px var(--theme-staking-stake-pool-tooltip-shadow-color);
+        height: 40px;
+        left: 105px;
+        position: fixed;
+        top: 204px;
+        width: calc(100% - 126px);
+        z-index: 99;
+      }
+    }
+
     tbody {
       tr {
         &:hover {
