--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -1,7 +1,23 @@
 .component {
   background: transparent;
   padding: 20px 0 0;
+  position: initial;
+  top: 134px;
+  transition: position 1s ease-out, top 1s ease-out;
   width: 100%;
+
+  &.componentFixedPosition {
+    background-color: var(--theme-main-body-background-color);
+    box-shadow: 0 2.5px 10px 0 var(--theme-staking-stake-pool-tooltip-shadow-color);
+    height: 70px;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding: 10px 20px;
+    position: fixed;
+    top: 134px;
+    width: calc(100% - 84px);
+    z-index: 99;
+  }
 }
 
 .container {
