DDW-16 Table comparison view for stake pools - fixes for table view

--- a/source/renderer/app/components/staking/stake-pools/StakePools.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePools.scss
@@ -31,5 +31,11 @@
     margin: 20px 0 10px;
     opacity: 0.5;
     padding-left: 20px;
+
+    &.tableHeading {
+      &.tableHeadingFixed {
+        margin-top: 91px;
+      }
+    }
   }
 }
