--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -12,10 +12,11 @@
   position: absolute;
   user-select: text;
   width: 280px;
-  z-index: 20;
+  z-index: 101;
 
   &.fixedComponent {
     position: fixed;
+    text-align: initial;
   }
 
   :global {
