--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -129,8 +129,11 @@
     tbody {
       tr {
         &:hover {
-          background-color: var(--theme-staking-stake-pools-search-clear-button-background-color);
+          background-color: var(--theme-staking-stake-pools-search-clear-button-hover-background-color);
           cursor: pointer;
+        }
+        &.selected {
+          background-color: var(--theme-staking-stake-pools-search-clear-button-background-color);
         }
       }
     }
