--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -115,7 +115,7 @@
       position: initial;
 
       &.fixedTableHeader {
-        background-color: var(--theme-staking-stake-pool-tooltip-retirement-text-color);
+        background-color: var(--theme-bordered-box-background-color);
         box-shadow: 0 10px 10px -10px var(--theme-staking-stake-pool-tooltip-shadow-color);
         height: 40px;
         position: fixed;
@@ -187,21 +187,25 @@
       }
 
       &:nth-child(6) {
-        min-width: 14%;
+        min-width: 14.7%;
       }
 
       &:nth-child(7) {
-        min-width: 7.5%;
+        min-width: 7%;
         text-align: right;
 
         @media (max-width: 925px) {
-          min-width: 9%;
+          min-width: 8%;
         }
       }
 
       &:last-child {
         min-width: 10%;
         text-align: center;
+
+        @media (max-width: 925px) {
+          min-width: 8%;
+        }
       }
 
       &:hover {
@@ -228,7 +232,7 @@
       }
 
       & > .sortIcon {
-        margin-left: 6px;
+        margin-left: 3px;
         visibility: hidden;
 
         & > svg {
