Display error message when a transaction fails

--- a/source/renderer/app/components/voting/voting-add-wizard/VotingAddStepsDeposit.scss
+++ b/source/renderer/app/components/voting/voting-add-wizard/VotingAddStepsDeposit.scss
@@ -34,4 +34,13 @@
       }
     }
   }
+
+  .errorMessage {
+    margin-top: 10px;
+    p {
+      color: var(--theme-color-error);
+      font-family: var(--font-medium);
+      font-weight: 500;
+    }
+  }
 }
