[DDW-197] Connect wallet feature from Add screen

--- a/source/renderer/app/components/widgets/BigButtonForDialogs.scss
+++ b/source/renderer/app/components/widgets/BigButtonForDialogs.scss
@@ -27,6 +27,21 @@
   }
 }
 
+.connectWalletButton {
+  .icon {
+    height: 83px;
+  }
+  .label {
+    margin-top: 5px;
+  }
+  .description {
+    margin-bottom: 18px;
+  }
+  svg {
+    height: 83px;
+  }
+}
+
 .label {
   color: var(--theme-dialog-big-button-label-color);
   font-family: var(--font-medium);
