--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step3FailureDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step3FailureDialog.scss
@@ -10,10 +10,10 @@
 
     path {
       stroke: var(--theme-dialog-fullsize-text-highlight-color);
-    }
 
-    path:nth-child(4) {
-      fill: var(--theme-dialog-fullsize-text-highlight-color);
+      &:nth-child(4) {
+        fill: var(--theme-dialog-fullsize-text-highlight-color);
+      }
     }
 
     circle {
