--- a/source/renderer/app/components/staking/countdown/StakingCountdown.scss
+++ b/source/renderer/app/components/staking/countdown/StakingCountdown.scss
@@ -2,7 +2,7 @@
 @import '../../../themes/mixins/link';
 
 .component {
-  padding: 20px;
+  padding: 20px 0 20px 20px;
 
   .mainContent {
     @extend %contentBorderAndBackground;
