--- a/source/renderer/app/components/staking/layouts/StakingWithNavigation.scss
+++ b/source/renderer/app/components/staking/layouts/StakingWithNavigation.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100% - 50px);
-  overflow-y: auto;
+  overflow-y: scroll;
   position: relative;
   scroll-behavior: smooth;
 }
