--- a/source/renderer/app/components/staking/rewards/StakingRewards.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewards.scss
@@ -1,6 +1,6 @@
 @import '../../../themes/mixins/link';
 .component {
-  padding: 20px;
+  padding: 20px 0 20px 20px;
 
   .headerWrapper {
     display: flex;
