--- a/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
+++ b/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
@@ -89,8 +89,9 @@
 
   .hardwareWalletsIcon {
     svg {
-      height: 30px;
-      width: 30px;
+      height: 14px;
+      margin-left: 6px;
+      width: 14px;
     }
     &.disconnected {
       svg {
