--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
@@ -39,6 +39,12 @@
         }
       }
     }
+
+    .hardwareWalletStatusWrapper {
+      margin-top: 20px;
+      max-width: 640px;
+      width: 100%;
+    }
   }
 
   .error {
