DDW-16 Table comparison view for stake pools - adding support ticker click and thumbnail opening

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -148,7 +148,6 @@
           background-color: var(
             --theme-staking-stake-pools-search-clear-button-hover-background-color
           );
-          cursor: pointer;
         }
 
         &.selected {
@@ -308,6 +307,10 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+
+        span {
+          cursor: pointer;
+        }
       }
 
       p {
