[DDW-16] Scroll height and fixed header debounce

--- a/source/renderer/app/components/staking/layouts/StakingWithNavigation.scss
+++ b/source/renderer/app/components/staking/layouts/StakingWithNavigation.scss
@@ -19,6 +19,11 @@
   overflow-y: scroll;
   position: relative;
   scroll-behavior: smooth;
+  &::-webkit-scrollbar-thumb {
+    &:vertical {
+      min-height: 60px !important;
+    }
+  }
 }
 
 .settingsTabPage {
