--- a/source/renderer/app/components/voting/info/VotingInfo.scss
+++ b/source/renderer/app/components/voting/info/VotingInfo.scss
@@ -15,10 +15,59 @@
 .description {
   @extend %regularText;
   color: var(--theme-voting-font-color-light);
-  margin-bottom: 24px;
-  span > span {
-    color: var(--theme-voting-steps-description-highlighted-color);
-    font-family: var(--font-medium);
-    font-weight: 500;
+  margin-bottom: 32px;
+}
+
+.stepsContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin-bottom: 32px;
+  .step {
+    width: 33%;
+    padding: 0 30px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    .stepIcon {
+      margin: 20px auto 40px auto;
+      width: 72px;
+      height: 72px;
+      svg {
+        path {
+          stroke: var(--theme-voting-info-icon-color);
+        }
+      }
+    }
+    p {
+      @extend %regularText;
+      color: var(--theme-voting-font-color-light);
+    }
+    .number {
+      @extend %regularText;
+      background: var(--theme-voting-info-background-color);
+      border-radius: 100%;
+      width: 32px;
+      height: 32px;
+      line-height: 34px;
+      margin: 10px auto 20px;
+    }
+    .appStore {
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-around;
+      .stepAppStoreIcon {
+        width: 100px;
+      }
+    }
+  }
+}
+
+@media (max-width: 950px) {
+  .stepsContainer {
+    flex-direction: column;
+    .step {
+      width: 100%;
+    }
   }
 }
