Fix lint and flow errors

--- a/source/renderer/app/components/voting/VotingAdd.scss
+++ b/source/renderer/app/components/voting/VotingAdd.scss
@@ -12,7 +12,7 @@
     text-transform: uppercase;
   }
 
-  .subTitle {
+  .subtitle {
     @extend %regularText;
     font-size: 14px;
     margin-bottom: 14px;
