--- a/source/renderer/app/components/staking/redeem-itn-rewards/NoWalletsDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/NoWalletsDialog.scss
@@ -9,12 +9,15 @@
     stroke: var(--theme-dialog-fullsize-text-highlight-color);
 
     path {
-      fill: transparent;
       stroke: var(--theme-dialog-fullsize-text-highlight-color);
     }
 
+    path:nth-child(4) {
+      fill: var(--theme-dialog-fullsize-text-highlight-color);
+    }
+
     circle {
-      fill: transparent;
+      fill: var(--theme-dialog-fullsize-text-highlight-color);
     }
 
     g {
