--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step3FailureDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step3FailureDialog.scss
@@ -2,18 +2,24 @@
   display: block;
   margin-bottom: 30px;
   text-align: center;
+
   svg {
+    fill: transparent;
     height: 71px;
     stroke: var(--theme-dialog-fullsize-text-highlight-color);
+
     path {
       stroke: var(--theme-dialog-fullsize-text-highlight-color);
+
       &:nth-child(4) {
         fill: var(--theme-dialog-fullsize-text-highlight-color);
       }
     }
+
     circle {
       fill: var(--theme-dialog-fullsize-text-highlight-color);
     }
+
     g {
       ellipse {
         &:nth-child(7),
@@ -34,12 +40,14 @@
     }
   }
 }
+
 .description {
   font-family: var(--font-regular);
   font-size: 16px;
   line-height: 1.38;
   margin-bottom: 30px;
   text-align: center;
+
   b {
     font-family: var(--font-semibold);
   }
