[DDW-417]: Update stake pool styles

--- a/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
@@ -32,9 +32,14 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    height: 27px;
 
     :global {
       .SVGInline {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+
         svg {
           height: 3px;
           width: 12px;
