[DDW-417]: Fix stake pool tooltip styles

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -95,6 +95,7 @@
   .noDataDash {
     background-color: var(--theme-staking-stake-pool-grey-bg-color);
     border-radius: 3px;
+    display: inline-block;
     height: 16px;
     width: 23px;
 
