--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -107,6 +107,16 @@
     width: 100%;
 
     thead {
+      background: red;
+      background: var(--theme-bordered-box-background-color);
+      background: white;
+      box-shadow: 0px 10px 10px -10px rgba(0, 0, 0, 0.2);
+      display: block;
+      margin: -20px -20px 0;
+      padding: 0 20px;
+      position: sticky;
+      top: 0;
+      z-index: 99;
       tr {
         border: 0;
         display: flex;
@@ -116,8 +126,6 @@
     }
 
     .tableHeader {
-      position: initial;
-
       &.fixedTableHeader {
         background-color: var(--theme-bordered-box-background-color);
         border-left: var(--theme-bordered-box-border);
@@ -267,7 +275,7 @@
       }
 
       &:first-child {
-        min-width: 57.58px
+        min-width: 57.58px;
       }
 
       &:nth-child(3) {
