--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -108,7 +108,7 @@
 
     thead {
       background: var(--theme-bordered-box-background-color);
-      box-shadow: 0px 10px 10px -10px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.2);
       display: block;
       margin: -20px -20px 0;
       padding: 0 20px;
@@ -175,7 +175,7 @@
       font-size: 10px;
       font-weight: 600;
       line-height: 2;
-      padding: 10px;
+      padding: 10px 0;
       text-align: left;
       text-transform: uppercase;
       vertical-align: middle;
@@ -188,14 +188,14 @@
       }
 
       &:nth-child(2) {
-        max-width: 100px;
-        min-width: 100px;
+        max-width: 70px;
+        min-width: 70px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
 
-      &:nth-child(7) {
+      &:nth-child(8) {
         margin-right: -12px;
         text-align: right;
       }
@@ -258,7 +258,7 @@
       font-family: var(--font-regular);
       font-size: 12px;
       line-height: 1.33;
-      padding: 10px;
+      padding: 10px 0;
       position: relative;
       text-align: left;
       -webkit-user-select: none;
@@ -273,7 +273,7 @@
       }
 
       &:first-child {
-        min-width: 57.58px;
+        min-width: 37.58px;
       }
 
       &:nth-child(3) {
@@ -294,6 +294,11 @@
       }
 
       &:nth-child(7) {
+        min-width: 134.42px;
+        text-align: right;
+      }
+
+      &:nth-child(8) {
         min-width: 67.48px;
         text-align: right;
       }
@@ -308,8 +313,8 @@
       }
 
       &:nth-child(2) {
-        max-width: 100px;
-        min-width: 100px;
+        max-width: 70px;
+        min-width: 70px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
