--- a/source/renderer/app/components/loading/syncing-connecting/StatusIcons.scss
+++ b/source/renderer/app/components/loading/syncing-connecting/StatusIcons.scss
@@ -3,10 +3,8 @@
 .component {
   bottom: 20px;
   display: flex;
-  flex-flow: row;
   justify-content: center;
   position: absolute;
-  text-align: center;
   width: 100%;
   z-index: 2500;
 
@@ -19,9 +17,11 @@
       width: 20px;
     }
     &.icon-nodeState {
+      padding-right: 4px;
       padding-top: 0;
       svg {
         height: 22px;
+        width: 22px;
       }
     }
     &.icon-isNodeResponding {
@@ -78,14 +78,5 @@
   margin-right: 12px;
   &:last-child {
     margin-right: 0;
-  }
-  :global .SimpleBubble_root {
-    font-size: 14px;
-    > div {
-      border-radius: 5px;
-      margin-left: 10px;
-      padding-bottom: 7px;
-      transform: translateX(-45%);
-    }
   }
 }
