[DDW-421]: Update stakepool tooltip styles

--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -433,6 +433,15 @@
         opacity: 0.5;
       }
     }
+
+    :global {
+      .SimpleTooltip_root {
+        .SimpleBubble_bubble {
+          white-space: normal;
+          width: 300px;
+        }
+      }
+    }
   }
 
   dd {
