--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -176,6 +176,10 @@
             min-width: 40px;
           }
 
+          &:nth-child(2) {
+            margin-left: -5px;
+          }
+
           &:nth-child(3) {
             min-width: 30px;
           }
