[DDW-16] Run prettier and linters

--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseWalletDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseWalletDialog.scss
@@ -10,8 +10,15 @@
       }
     }
 
-    .WalletsDropdownOption_topRow .WalletsDropdownOption_syncing > div .LoadingSpinner_icon svg path {
-      fill: var(--theme-delegation-steps-choose-wallet-custom-value-color) !important;
+    .WalletsDropdownOption_topRow
+      .WalletsDropdownOption_syncing
+      > div
+      .LoadingSpinner_icon
+      svg
+      path {
+      fill: var(
+        --theme-delegation-steps-choose-wallet-custom-value-color
+      ) !important;
       opacity: 0.5;
     }
 
