--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -431,9 +431,7 @@
 }
 
 .defaultColorContent {
-  background: var(
-      --theme-staking-stake-pool-tooltip-neutral-background-color
-  );
+  background: var(--theme-staking-stake-pool-tooltip-neutral-background-color);
   color: var(--theme-staking-stake-pool-tooltip-neutral-text-color);
 }
 
